:lipstick: fix wrong text overflow of the summary

--- a/src/modules/bpmn-diff-view/bpmn-diff-view.scss
+++ b/src/modules/bpmn-diff-view/bpmn-diff-view.scss
@@ -117,20 +117,20 @@
 }
 
 .change-list-table-wrapper {
-  height: calc(100% - 18px);
   overflow: auto;
-  border-bottom: 2px dashed #ccc;
 }
 
 .diff-summary {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 18px;
+  min-height: 18px;
   text-align: center;
+  border-top: 4px dashed #ccc;
 }
 
 .diff-summary__change-type {
+  display: inline-block;
   position: relative;
 }
 
